--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,12 @@
   "categories": ["productivity", "lifestyle", "utilities"],
   "icons": [
     {
+      "src": "icons/logo.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
       "src": "icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png",
